# RPiLCD

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
example/: I2c_Rasp.py
tests/unit/: __init__.py  test_I2C.py  test_display.py  test_toggle_backlight.py  test_write.py
