[tool.poetry]
name = "rpilcd"
version = "0.1.0"
description = "Esta librería es para el manejo de pantallas LCD en la Raspberry Pi"
authors = ["Esteban, herrerazanecheverry@gmail.com"]
license = "LGPL"
readme = "README.md"
packages = [
    { include = "RPiLCD", from = "src" }
]
keywords = ["raspberrypi", "lcd", "i2c", "display"]

[tool.poetry.dependencies]
python = ">=3.10"
smbus = ">=1.1.post2,<2.0"
rpi-gpio = ">=0.7.1,<0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
