[metadata]
name = RPiLCD
version = 0.1.0
description = Librería para controlar LCD en Raspberry Pi
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Esteban
author_email = herrerazanecheverry@gmail.com
license = LGPLv3
keywords = raspberry, raspberry pi, lcd, liquid crystal, rpi, i2c, displayScreen
url = https://github.com/Exploit34/RPiLCD

[options]
packages = find:
python_requires = >=3.10
install_requires =
    smbus2
    RPi.GPIO