[metadata]
name = LCDRP
version = 1.0.0
author = Esteban
author_email = herrerazanecheverry@gmail.com
description = Librería para controlar LCD en Raspberry Pi
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPLv3
keywords = raspberry, raspberry pi, lcd, liquid crystal, rpi, i2c, displayScreen
url = https://github.com/Exploit34/RPiLCD

[options]
packages = find:
python_requires = >=3.9,<3.12
install_requires =
    smbus
    rpi-gpio